--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -12,7 +12,7 @@ NUMERO_OWNER=221778271315
 WARN_COUNT=3
 STARTING_BOT_MESSAGE=oui
 ANTI_VUE_UNIQUE=oui
-PM_CHATBOT=non
+PM_CHATBOT=oui
 HEROKU=non
 ANTI_COMMAND_SPAM=non
 ANTI_DELETE_MESSAGE=oui
